--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,11 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "classmap": [
+            "app/Http/Controllers",
+            "app/Models"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
